# cohort4

./: .gitignore  pyproject.toml  rough.txt
deployments/kind/: create_cluster.sh  install_kafka.sh  install_kafka_ui.sh  kind-with-portmapping.yaml
deployments/kind/manifests/: kafka-e11b.yaml  kafka-ui-all-in-one.yaml
serivces/trades/: pyproject.toml
serivces/trades/src/trades/: Makefile  __init__.py  config.py  kraken_api.py  main.py  settings.env
